# near-examples-extended

./: README.md
versioned_extended/: Cargo.toml  README.md  build.sh
versioned_extended/res/: versioned_extended.wasm
versioned_extended/src/: balances.rs  contracts.rs  lib.rs
